# cert-uefi-parser

./: .gitignore  README.md  pyproject.toml
uefi_parser/: cmds.py  gui_helper.py
